# scrypto_statictypes

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  SECURITY.md  crates.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/ISSUE_TEMPLATE/: compile-issue.md  feature_request.md
.github/workflows/: gh-pages.yml  test.yml
examples/badburn1/: Cargo.toml
examples/badburn1/src/: lib.rs
examples/badburn1/tests/: lib.rs
examples/fixburn1/: Cargo.toml  test.sh
examples/fixburn1/src/: choose.rs  lib.rs  staticlib.rs
examples/fixburn1/tests/: lib.rs
examples/manyrefs/: Cargo.toml
examples/manyrefs/src/: lib.rs
examples/manyrefs/tests/: lib.rs
examples/mycomponent/: Cargo.toml
examples/mycomponent/src/: lib.rs
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/sbor/decode/: trait.Decode.js
implementors/sbor/describe/: trait.Describe.js
implementors/sbor/encode/: trait.Encode.js
implementors/sbor/type_id/: trait.TypeId.js
implementors/scrypto_statictypes/internal/: trait.ResourceDecl.js
misc/: bad2fixburn1.diff
scrypto_statictypes/: all.html  enum.XRD.html  index.html  macro.declare_resource.html  sidebar-items.js
scrypto_statictypes/bucketof/: struct.BucketOf.html
scrypto_statictypes/bucketrefof/: struct.BucketRefOf.html  trait.UncheckedIntoBucketRefOf.html
scrypto_statictypes/exts/: trait.Deposit.html  trait.DepositOf.html  trait.DepositOfExplicit.html  trait.Withdraw.html  trait.WithdrawOf.html  trait.WithdrawOfExplicit.html
scrypto_statictypes/internal/: enum.Address.html  struct.ResourceAddress.html  trait.Resource.html  trait.ResourceDecl.html  trait.UncheckedInto.html  trait.Unwrap.html  trait.WithInner.html
scrypto_statictypes/prelude/: enum.Address.html  index.html  macro.declare_resource!.html  macro.declare_resource.html  sidebar-items.js  struct.BucketOf.html  struct.BucketRefOf.html  struct.ProofOf.html  struct.ResourceAddress.html  struct.ResourceOf.html  struct.VaultOf.html  trait.Deposit.html  trait.DepositOf.html  trait.DepositOfExplicit.html  trait.ResourceDecl.html  trait.StaticResource.html  trait.StaticResourceDecl.html  trait.UncheckedInto.html  trait.UncheckedIntoBucketRefOf.html  trait.UncheckedIntoProofOf.html  trait.Unwrap.html  trait.WithInner.html  trait.Withdraw.html  trait.WithdrawOf.html  trait.WithdrawOfExplicit.html
scrypto_statictypes/proofof/: struct.ProofOf.html  trait.UncheckedIntoProofOf.html
scrypto_statictypes/resourceof/: struct.ResourceOf.html
scrypto_statictypes/vaultof/: struct.VaultOf.html
src/: bucketof.rs  bucketrefof.rs  exts.rs  internal.rs  lib.rs  macros.rs  prelude.rs  proofof.rs  resourceof.rs  runtime.rs  vaultof.rs
src/scrypto_statictypes/: bucketof.rs.html  bucketrefof.rs.html  exts.rs.html  internal.rs.html  lib.rs.html  macros.rs.html  prelude.rs.html  proofof.rs.html  resourceof.rs.html  runtime.rs.html  vaultof.rs.html
utils/: bump.py  test_examples.sh
