[package]
name = "manyrefs"
version = "0.2.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0"}
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0"}
scrypto_statictypes = { path = "../../" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["scrypto_statictypes/runtime_typechecks"]

[workspace]

# temporary explicit patch because we need bugfix commit after v0.2.0 but it needs to apply to all dependencies so we don't get mismatches
[patch."https://github.com/radixdlt/radixdlt-scrypto"]
sbor = { git = "https://github.com/devmannic/radixdlt-scrypto", rev = "a890ba796b4091f5aeccaff4bbeb49e6f288218c" }
scrypto = { git = "https://github.com/devmannic/radixdlt-scrypto", rev = "a890ba796b4091f5aeccaff4bbeb49e6f288218c" }
radix-engine = { git = "https://github.com/devmannic/radixdlt-scrypto", rev = "a890ba796b4091f5aeccaff4bbeb49e6f288218c" }
